# hivecall

./: .gitignore  README.md
backend/: .env.example  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/config/: app-config.module.ts
backend/src/relayer/: relayer.module.ts
backend/src/vaults/: vaults.module.ts
backend/src/webhooks/: webhooks.controller.ts  webhooks.service.ts
backend/test/: app.e2e-spec.ts
contracts/: .env.example  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: HiveCallRegistry.sol  VaultExecutor.sol  VaultExecutorFactory.sol
contracts/src/interfaces/: ICardChase.sol  IMessageTransmitter.sol  ITokenMessenger.sol
contracts/test/: HiveCallRegistry.t.sol
contracts/test/mocks/: MockCardChase.sol
frontend/: .env.example  package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useBackendHealth.ts
frontend/src/lib/: constants.ts
frontend/src/pages/: CreateVaultPage.tsx  HomePage.tsx  NativeVaultPage.tsx  VaultDetailPage.tsx
programs/: .gitignore  Anchor.toml  Cargo.toml  package.json
programs/native-vault/: Cargo.toml
programs/native-vault/src/: lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
programs/tests/: hivecall.spec.ts
programs/vault-factory/: Cargo.toml
programs/vault-factory/src/: lib.rs
specs/: arbitrum_contracts_pseudocode.sol  protocol_spec.md  solana_programs_pseudocode.rs  witepaper.md
(+2 files in other folders)
