[package]
name = "native-vault"
version = "0.1.0"
description = "HiveCall native vault (scaffold)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
